# ai-etf-trader

./: .dockerignore  .env.example  .gitignore  .gitignore.uv  AKSHARE_FIX_IMMEDIATE.md  AKSHARE_SOLUTION.md  CHECKLIST.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETION_SUMMARY.md  CONFIG_GUIDE.md  DATA_ANALYSIS_FOR_REPORT.md  DEPLOYMENT_AND_REPORT_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_STEPS.md  DIAGNOSIS_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTE_STEPS.md  EXECUTION_CHECKLIST.md  FINAL_CHECKLIST.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_FIX_REPORT.md  FINAL_SUMMARY.md  FINAL_TRUTH_REPORT.md  FIXES_REPORT.md  FIXES_SUMMARY.md  FIX_COMPLETION_REPORT.md  FUND_CHANGE_ANALYSIS.md  IMPLEMENTATION_REPORT.md  LICENSE  OPTIMIZATION_REPORT.md  PROBLEM_ANALYSIS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  QUICK_FIX.md  QUICK_FIX_GUIDE.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_DEPLOYMENT.md  README.md  (+74 more)
data/: trade_history.backup.db  trade_history.backup_20251222_before_rerun.db  trade_history.backup_20260105.db  trade_history.db  trade_history.db.bak_before_fill_20251224  trade_history.db.bak_before_today  trade_history.db.bak_capital_after_20251224_1766763961  trade_history.db.bak_daily_equity_1766763236  trade_history.db.bak_del_20251226_1766765029  trade_history.db.bak_equity_fix  trade_history.db.bak_ins_20251225_1766765851  trade_history.db.bak_ins_20251225_1766765877  trade_history.db.bak_set_20251224_1766763580  trade_history.db.bak_set_20251224_1766763591
decisions/: 20251125_159915_20251125_200056.json  20251125_510050_20251125_200051.json  20251125_510300_20251125_200101.json  20251126_159915_20251126_112501.json  20251126_510050_20251126_112457.json  20251126_510300_20251126_112506.json  20251127_159915_20251127_182114.json  20251127_510050_20251127_182110.json  20251127_510300_20251127_182116.json  (+369 more)
deploy/: ai-etf-web.service  (+5 more)
(+556 files in other folders)
